--- a/tutorial/1_ErsteSchritte.ipynb
+++ b/tutorial/1_ErsteSchritte.ipynb
@@ -714,6 +714,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# So erhalte ich das vierte Element in der Liste\n",
+        "print(my_list[3])"
+      ],
+      "metadata": {
+        "id": "WzLlZ-q4oq3_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "av8FobVD7Aty"
